--- a/package.json
+++ b/package.json
@@ -9,8 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.19",
+    "@mantine/dates": "^6.0.19",
+    "@mantine/hooks": "^6.0.19",
+    "@mantine/modals": "^6.0.19",
+    "@mantine/next": "^6.0.19",
+    "@mantine/notifications": "^6.0.20",
+    "@mantine/prism": "^6.0.20",
+    "@monaco-editor/react": "^4.5.2",
+    "@tabler/icons-react": "^2.32.0",
+    "dayjs": "^1.11.9",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "split-pane-react": "^0.1.3"
   }
 }
