beta version update

--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@mantine/prism": "^6.0.20",
     "@monaco-editor/react": "^4.5.2",
     "@tabler/icons-react": "^2.32.0",
-    "dayjs": "^1.11.9",
-    "next": "13.4.19",
+    "@tiptap/extension-link": "^2.1.11",
+    "@tiptap/react": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
+    "dayjs": "^1.11.10",
+    "embla-carousel-react": "^7.1.0",
+    "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "split-pane-react": "^0.1.3"
